# rust-collections

./: Cargo.toml
benches/: isomorphism.rs
benches/common/: factory.rs
file/: graph.dot
file/heap_profile/: heaptrack.rust-collections.18527.zst  heaptrack.rust-collections.18734.zst  heaptrack.rust-collections.18936.zst  heaptrack.rust-collections.26213.zst
src/: binary_heap_cus.rs  btreemap_cus.rs  lib.rs  linked_list_cus.rs  main.rs  raw_vec.rs  variance.rs  vec_cus.rs  vecdeque_cus.rs
src/graph/: common.rs  compressed_sparse_row.rs  graph_adjacency_list.rs  graph_dense_matrix.rs  graph_sparse_dok.rs  mod.rs  stable_vec.rs  visit.rs
src/graph/algo/: astar.rs  bellman_ford.rs  dijkstra.rs  feedback_arc_set.rs  floyd_warshall.rs  isomorphism.rs  k_shortest_path.rs  matching.rs  mod.rs  simple_paths.rs  vf2pp_isomorphism.rs
src/graph/algo/isomorphism/: label.rs  mod.rs  semantic.rs  vf2.rs  vf2pp.rs
tests/algo/: astar.rs  bellman_ford.rs  dijkstra.rs  feedback_arc_set.rs  floyd_warshall.rs  isomorphism.rs  k_shortest.rs  main.rs  matching.rs  simple_path.rs
