[package]
name = "rust-collections"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
petgraph = "0.6.4"
indexmap = "2.0.0"
fixedbitset = "0.4.2"
itertools = { version = "0.11.0", default-features = false }

[profile.release]
debug = true